# SmartStudy-Agent

./: .env.example  .gitignore  README.md  app.py  chat_prompt.py  llm.py  main.py  planner_prompt.py  pyproject.toml  requirements.txt
db/: database.py
graph/: state.py  study_graph.py
rag/: chroma_store.py
static/: script.js  style.css
templates/: index.html
utils/: pdf_reader.py
